--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div class="botones">
 
 
-        <a href="Portfolio.html" class="boton"style="margin: 5px">Portfolio</a>
-        <a href="Tienda.html" target="_blank" class="boton"style="margin: 5px">Tienda</a>
+        <a href="portfolio.html" class="boton"style="margin: 5px">Portfolio</a>
+        <a href="tienda.html" target="_blank" class="boton"style="margin: 5px">Tienda</a>
         <a href="contacto.html" class="boton"style="margin: 5px">Contacto</a>
 
     </div>
